[HOTFIX] Fix Layout (#85)
* refine size search bar and  unhide scrollbar

* add shell title

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -810,12 +810,6 @@ html, body {
     padding-bottom: 2em;
     padding: 2em $main-padding;
     border-radius: 0 0 8px 8px;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
   }
 
   blockquote {
@@ -849,7 +843,7 @@ html, body {
       }
       &>.search {
         input {
-          width: 300px;
+          width: 240px;
         }
       }
     }
